rpi5/qbit-manage/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbit-manage
  labels:
    app: qbit-manage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbit-manage
  serviceName: qbit-manage
  template:
    metadata:
      name: qbit-manage
      labels:
        app: qbit-manage
    spec:
      containers:
        - name: qbit-manage
          image: ghcr.io/stuffanthings/qbit_manage:v4.13.0@sha256:ea04167f627e506b3691304f4c639a52c05584cc9aea4af7ec87d4ed1299e7f5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8181
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          securityContext:
            runAsUser: 2020
            runAsGroup: 3002
      restartPolicy: Always
      securityContext:
        fsGroup: 3002
      volumes:
        - name: data
          hostPath:
            path: /data
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
