rpi5/qbit-manage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbit-manage
spec:
  selector:
    app: qbit-manage
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
